--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,20 @@
             <ion-icon slot="start" name="exit"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
+          <ion-item lines="none" *ngIf="canInstallPwa()" (click)="doInstallPwa()">
+            <ion-icon slot="start" name="cloud-download"></ion-icon>
+            <ion-label>Installa</ion-label>
+          </ion-item>
+
+          <ion-item lines="none" (click)="doCheckUpdates()">
+            <ion-icon slot="start" name="list"></ion-icon>
+            <ion-label>Controlla aggiornamenti</ion-label>
+          </ion-item>
+
+          <ion-item lines="none" (click)="doRefreshBrowser()">
+            <ion-icon slot="start" name="sync"></ion-icon>
+            <ion-label>Riavvia App</ion-label>
+          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
