--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -7,7 +7,7 @@
 			<ion-grid>
 				<ion-row class="padding-bottom">
 					<ion-col>
-						<img alt="" src="assets/img/BAT_logo.png" width="220">
+						<img alt="" class="center" src="assets/icons/icon-128x128.png" width="220">
 					</ion-col>
 				</ion-row>
 				<ion-row>
