--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -36,7 +36,7 @@
 				<ion-row>
 					<ion-col>
 						<ion-button expand="block" color="success" (click)="login()" [disabled]="loginForm.invalid">
-							Accedi
+							Log In
 						</ion-button>
 					</ion-col>
 				</ion-row>
@@ -46,7 +46,7 @@
 						<ion-button class="margin-top" *ngIf="canInstallPwa()" (click)="doInstallPwa()"
 								size="default">
 							<ion-icon slot="start" name="cloud-download"></ion-icon>
-							<ion-label>&nbsp;Installa Web App</ion-label>
+							<ion-label>&nbsp;Install App</ion-label>
 						</ion-button>
 
 					</ion-col>
@@ -61,6 +61,6 @@
 
 <ion-footer>
 	<ion-toolbar>
-		<small>Powered by Pardgroup S.p.A.&copy;2019. All rights reserved.</small>
+		<small>Powered by Kumar Ajay. All rights reserved.</small>
 	</ion-toolbar>
 </ion-footer>
