--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,9 +12,9 @@
 
     <ion-toolbar [hidden]="!bannerIsVisible" id="second-toolbar" color="medium">
         <ion-text text-wrap id="second-title">
-            Benvenuto,
-            <br> stiamo ancora scaricando dati neccessari per il corretto funzionamento dell'app in background,
-            rimani collegato alla rete, una volta scaricati questo banner scomparirà in automaitco.
+            Welcome,
+            <br> we are downloading app functionalities in background,
+            stay connected to internet, where the download is complete this banner will disappear automatically.
         </ion-text>
     </ion-toolbar>
 </ion-header>
