--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,7 +50,7 @@ ion-menu.md ion-item {
 }
 
 ion-menu.md ion-item.selected {
-  --background: rgba(var(--ion-color-primary-rgb), 0.14);
+  --background: #000;
 }
 
 ion-menu.md ion-item.selected ion-icon {
