--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -35,7 +35,7 @@
 
 				<ion-row>
 					<ion-col>
-						<ion-button expand="block" color="success" (click)="login()" [disabled]="loginForm.invalid">
+						<ion-button expand="full" size="default" color="success" (click)="login()" [disabled]="loginForm.invalid">
 							Log In
 						</ion-button>
 					</ion-col>
